Fixes margin issues on mobile
The truncation was conflicting with floating on mobile sizes.

--- a/app/styles/components/event-info.less
+++ b/app/styles/components/event-info.less
@@ -15,7 +15,9 @@
 }
 
 .EventInfo-content {
-  margin-left: 24px;
+  @media (min-width: @screen-sm-min) {
+    margin-left: 24px;
+  }
 }
 
 .EventInfo-headerLink {
